# my_awesomewm

./: .fennel-ls.json  .gitignore  .gitmodules  Makefile  README.md  build.fnl  rc.lua  run
.nvim/: init.vim
chrome-extension/: WebSocket.mjs  main.mjs  manifest.json  popup.html  popup.js
fcitx5-cursor-position/: xmake.lua
fcitx5-cursor-position/src/: main.cpp
gtk-lua/: '  compile_commands.json  xmake.lua
gtk-lua/src/: ejs.ts  main.c
src/: a.fnl  autorun.fnl  awesome-global.fnl  client-key-bindings.fnl  client.fnl  clipboard.fnl  const.fnl  floating.fnl  focus-win.fnl  init-macros.fnl  key-bindings.fnl  m1.fnl  main.fnl  notification.fnl  rules.fnl  tag.fnl  test.fnl  topbar.fnl
src/command-palette/: applications.fnl  awesome.fnl  bookmark.fnl  chrome.fnl  cmds.fnl  load-cmds.fnl  palette.fnl  palette_.fnl  system.fnl  tag.fnl  tools.fnl  volumn.fnl  windows.fnl
src/components/: battery.fnl  function-bar.fnl  jd.fnl  volume.fnl
src/fltk/: demo-win.fnl  node.fnl  widgets.fnl
src/gtk/: demo-box.fnl  demo-counter.fnl  demo-custom.fnl  demo-entry.fnl  demo-flowbox.fnl  demo-grid.fnl  demo-list.fnl  demo-notebook.fnl  demo-popover.fnl  demo-style.fnl  demo-time.fnl  demo-todo.fnl  keyval.fnl  node.fnl  observable.fnl  style.fnl  utils.fnl  widgets.fnl
widgets/: Cargo.toml  build.rs
widgets/examples/: a.rs
widgets/src/: cairo.rs  cairo_utils.rs  fltk.rs  fs.rs  fuzzy.rs  gdk.rs  gdk4.rs  gtk.rs  gtk4.rs  gtk4_css.rs  gtk4_enums.rs  gtk_enums.rs  gtk_events.rs  gtk_style.rs  launch.rs  lib.rs  lua_module.rs  qt.rs  web_socket.rs  widgets.rs  win.rs  xdgkit.rs
xdnd/: main.c  xmake.lua
(+102 files in other folders)
