[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua={version ="0.9.1",features=["lua53","module"]}
cairo-rs ={version="0.18.2",features=["xcb","svg"]}
xcb = "1.2.2"
once_cell = "1.18.0"
taffy = "0.3.18"
# gtk4 = "0.7.3"

