[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua={version ="0.9.1",features=["lua53","module"]}
cairo-rs ={version="0.18.2",features=["xcb","svg"]}
xcb = "1.2.2"
once_cell = "1.18.0"
taffy = {git="https://github.com/DioxusLabs/taffy.git",branch="main"}
fltk = "1.4.22"
fltk-sys = "1.4.22"
glib = "0.18.5"
gtk = "0.18.1"
gtk-sys = "0.18.0"
pango = "0.18"
gtk4 = {version ="0.8.0",features=["v4_12"]}
gdk4-sys = "0.8.0"
gsk4-sys = "0.8.0"
gdk4-x11 = "0.8.0"

